@@ -15,6 +15,8 @@ Release ...
   in the "cmap" table (patch by Matthew Fischer).
 * troff/dpost: Accept "cmap" entries with Platform ID 3, Encoding ID 0
   (Symbol) as Unicode tables (patch by Matthew Fischer).
+* troff/dpost: Handle TrueType fonts in which glyphs appear multiple times
+  in Unicode tables gracefully (bugreport by Matthew Fischer).
 * troff: Do not apply font-specific character translation inside \D,
   which led to wrong output e.g. with \D'l' with an OpenType font with
   the small caps feature activated (bug reported by Russ Cox).
